--- a/tutorials/13-privategpt.ipynb
+++ b/tutorials/13-privategpt.ipynb
@@ -53,13 +53,22 @@
    "id": "b6b7f61d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-25T09:47:39.323353Z",
-     "iopub.status.busy": "2023-06-25T09:47:39.322865Z",
-     "iopub.status.idle": "2023-06-25T09:47:49.107405Z",
-     "shell.execute_reply": "2023-06-25T09:47:49.106532Z"
+     "iopub.execute_input": "2023-06-26T15:18:37.652958Z",
+     "iopub.status.busy": "2023-06-26T15:18:37.652418Z",
+     "iopub.status.idle": "2023-06-26T15:18:48.838481Z",
+     "shell.execute_reply": "2023-06-26T15:18:48.837299Z"
     }
    },
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\r\n",
+      "grpcio-tools 1.56.0 requires protobuf<5.0dev,>=4.21.6, but you have protobuf 3.20.1 which is incompatible.\u001b[0m\u001b[31m\r\n",
+      "\u001b[0m"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -98,10 +107,10 @@
    "id": "1ee8b17b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-25T09:47:49.112357Z",
-     "iopub.status.busy": "2023-06-25T09:47:49.112077Z",
-     "iopub.status.idle": "2023-06-25T09:47:49.366458Z",
-     "shell.execute_reply": "2023-06-25T09:47:49.364690Z"
+     "iopub.execute_input": "2023-06-26T15:18:48.843416Z",
+     "iopub.status.busy": "2023-06-26T15:18:48.843117Z",
+     "iopub.status.idle": "2023-06-26T15:18:50.226308Z",
+     "shell.execute_reply": "2023-06-26T15:18:50.224531Z"
     }
    },
    "outputs": [
@@ -142,10 +151,10 @@
    "id": "56913976",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-25T09:47:49.371882Z",
-     "iopub.status.busy": "2023-06-25T09:47:49.371508Z",
-     "iopub.status.idle": "2023-06-25T09:47:49.523253Z",
-     "shell.execute_reply": "2023-06-25T09:47:49.522307Z"
+     "iopub.execute_input": "2023-06-26T15:18:50.231830Z",
+     "iopub.status.busy": "2023-06-26T15:18:50.231484Z",
+     "iopub.status.idle": "2023-06-26T15:18:50.532197Z",
+     "shell.execute_reply": "2023-06-26T15:18:50.531370Z"
     }
    },
    "outputs": [],
@@ -170,10 +179,10 @@
    "id": "f2674110",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-25T09:47:49.526700Z",
-     "iopub.status.busy": "2023-06-25T09:47:49.526373Z",
-     "iopub.status.idle": "2023-06-25T09:47:53.582949Z",
-     "shell.execute_reply": "2023-06-25T09:47:53.582077Z"
+     "iopub.execute_input": "2023-06-26T15:18:50.536887Z",
+     "iopub.status.busy": "2023-06-26T15:18:50.536659Z",
+     "iopub.status.idle": "2023-06-26T15:18:54.727050Z",
+     "shell.execute_reply": "2023-06-26T15:18:54.726125Z"
     }
    },
    "outputs": [
@@ -353,10 +362,10 @@
    "id": "bc57b1ff",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-25T09:47:53.587853Z",
-     "iopub.status.busy": "2023-06-25T09:47:53.587520Z",
-     "iopub.status.idle": "2023-06-25T09:47:55.185729Z",
-     "shell.execute_reply": "2023-06-25T09:47:55.184975Z"
+     "iopub.execute_input": "2023-06-26T15:18:54.732379Z",
+     "iopub.status.busy": "2023-06-26T15:18:54.732120Z",
+     "iopub.status.idle": "2023-06-26T15:18:56.234582Z",
+     "shell.execute_reply": "2023-06-26T15:18:56.233640Z"
     }
    },
    "outputs": [
@@ -371,7 +380,7 @@
     {
      "data": {
       "text/plain": [
-       "<evadb.models.storage.batch.Batch at 0x7efbccf15fc0>"
+       "<evadb.models.storage.batch.Batch at 0x7f0933699870>"
       ]
      },
      "execution_count": 5,
@@ -399,6 +408,33 @@
   {
    "attachments": {},
    "cell_type": "markdown",
+   "id": "1036139a",
+   "metadata": {},
+   "source": [
+    "#### Configure Dataframe Display"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "fd70a210",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-06-26T15:18:56.238104Z",
+     "iopub.status.busy": "2023-06-26T15:18:56.237856Z",
+     "iopub.status.idle": "2023-06-26T15:18:56.242127Z",
+     "shell.execute_reply": "2023-06-26T15:18:56.241312Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "pd.set_option('display.max_colwidth', None)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
    "id": "f502eddb",
    "metadata": {},
    "source": [
@@ -407,14 +443,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "d8b1abe7",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-25T09:47:55.188953Z",
-     "iopub.status.busy": "2023-06-25T09:47:55.188647Z",
-     "iopub.status.idle": "2023-06-25T09:48:04.510780Z",
-     "shell.execute_reply": "2023-06-25T09:48:04.509779Z"
+     "iopub.execute_input": "2023-06-26T15:18:56.245303Z",
+     "iopub.status.busy": "2023-06-26T15:18:56.244988Z",
+     "iopub.status.idle": "2023-06-26T15:19:05.442420Z",
+     "shell.execute_reply": "2023-06-26T15:19:05.441454Z"
     }
    },
    "outputs": [
@@ -445,18 +481,18 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Index faiss_indexs successfully added to the d...</td>\n",
+       "      <td>Index faiss_indexs successfully added to the database.</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                                   0\n",
-       "0  Index faiss_indexs successfully added to the d..."
+       "                                                        0\n",
+       "0  Index faiss_indexs successfully added to the database."
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -472,24 +508,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "66b0bd42",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-25T09:48:04.516301Z",
-     "iopub.status.busy": "2023-06-25T09:48:04.515456Z",
-     "iopub.status.idle": "2023-06-25T09:48:07.328747Z",
-     "shell.execute_reply": "2023-06-25T09:48:07.328031Z"
+     "iopub.execute_input": "2023-06-26T15:19:05.447792Z",
+     "iopub.status.busy": "2023-06-26T15:19:05.447027Z",
+     "iopub.status.idle": "2023-06-26T15:19:15.284618Z",
+     "shell.execute_reply": "2023-06-26T15:19:15.283747Z"
     }
    },
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "06-25-2023 05:48:05 WARNING[vector_index_scan_executor:vector_index_scan_executor.py:exec:0086] The index faiss_indexs returned only 2 results, which is fewer than the required 3.\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -517,23 +546,71 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>[38] Zhong, X., Tang, J., Yepes, A.J.: Publayn...</td>\n",
+       "      <td>That’s why the NATO Alliance was created to secure peace and stability in Europe after World War 2.</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>May God bless you all. May God protect our tro...</td>\n",
+       "      <td>For that purpose we’ve mobilized American ground forces, air squadrons, and ship deployments to protect NATO countries including Poland, Romania, Latvia, Lithuania,and Estonia.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>We spent months building a coalition of other freedom-loving nations from Europe and the Americas to Asia and Africa to confront Putin.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>As I have made crystal clear the United States and our Allies will defend every inch of territory of NATO countries with the full force of our collective power.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>He thought the West and NATO wouldn’t respond. And he thought he could divide us athome. Putin was wrong. We were ready.  Here is what we did.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>512</th>\n",
+       "      <td>3.4Storage and visualization</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>513</th>\n",
+       "      <td>Get rid of outdated rules that stop doctors from prescribing treatments. And stop the flow of illicit drugs by working with state and local law enforcement to go after traffickers.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>514</th>\n",
+       "      <td>Heath’s widow Danielle is here with us tonight. They loved going to Ohio State football games. He loved building Legos with their daughter.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>515</th>\n",
+       "      <td>But cancer from prolonged exposure to burn pits ravaged Heath’s lungs and body.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>516</th>\n",
+       "      <td>This is personal to me and Jill, to Kamala, and to so many of you.</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>517 rows × 1 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                         mypdfs.data\n",
-       "0  [38] Zhong, X., Tang, J., Yepes, A.J.: Publayn...\n",
-       "1  May God bless you all. May God protect our tro..."
+       "                                                                                                                                                                               mypdfs.data\n",
+       "0                                                                                     That’s why the NATO Alliance was created to secure peace and stability in Europe after World War 2. \n",
+       "1        For that purpose we’ve mobilized American ground forces, air squadrons, and ship deployments to protect NATO countries including Poland, Romania, Latvia, Lithuania,and Estonia. \n",
+       "2                                                 We spent months building a coalition of other freedom-loving nations from Europe and the Americas to Asia and Africa to confront Putin. \n",
+       "3                       As I have made crystal clear the United States and our Allies will defend every inch of territory of NATO countries with the full force of our collective power.  \n",
+       "4                                        He thought the West and NATO wouldn’t respond. And he thought he could divide us athome. Putin was wrong. We were ready.  Here is what we did.   \n",
+       "..                                                                                                                                                                                     ...\n",
+       "512                                                                                                                                                           3.4Storage and visualization\n",
+       "513  Get rid of outdated rules that stop doctors from prescribing treatments. And stop the flow of illicit drugs by working with state and local law enforcement to go after traffickers. \n",
+       "514                                           Heath’s widow Danielle is here with us tonight. They loved going to Ohio State football games. He loved building Legos with their daughter. \n",
+       "515                                                                                                       But cancer from prolonged exposure to burn pits ravaged Heath’s lungs and body. \n",
+       "516                                                                                                                    This is personal to me and Jill, to Kamala, and to so many of you. \n",
+       "\n",
+       "[517 rows x 1 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -546,7 +623,6 @@
     "                    SentenceFeatureExtractor('When was the NATO created?'), SentenceFeatureExtractor(data)\n",
     "                )\"\"\"\n",
     "            )\n",
-    "            .limit(3)\n",
     "            .select(\"data\")\n",
     "        ).df()\n",
     "query"
