--- a/tutorials/12-query-pdf.ipynb
+++ b/tutorials/12-query-pdf.ipynb
@@ -52,10 +52,10 @@
    "id": "cc1741d4",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-25T09:47:09.337011Z",
-     "iopub.status.busy": "2023-06-25T09:47:09.336492Z",
-     "iopub.status.idle": "2023-06-25T09:47:16.367566Z",
-     "shell.execute_reply": "2023-06-25T09:47:16.366510Z"
+     "iopub.execute_input": "2023-06-27T00:12:52.188552Z",
+     "iopub.status.busy": "2023-06-27T00:12:52.188028Z",
+     "iopub.status.idle": "2023-06-27T00:12:59.400478Z",
+     "shell.execute_reply": "2023-06-27T00:12:59.399602Z"
     }
    },
    "outputs": [
@@ -88,10 +88,10 @@
    "id": "1ee8b17b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-25T09:47:16.372809Z",
-     "iopub.status.busy": "2023-06-25T09:47:16.372437Z",
-     "iopub.status.idle": "2023-06-25T09:47:16.505370Z",
-     "shell.execute_reply": "2023-06-25T09:47:16.503687Z"
+     "iopub.execute_input": "2023-06-27T00:12:59.405067Z",
+     "iopub.status.busy": "2023-06-27T00:12:59.404801Z",
+     "iopub.status.idle": "2023-06-27T00:13:00.099717Z",
+     "shell.execute_reply": "2023-06-27T00:13:00.097894Z"
     }
    },
    "outputs": [
@@ -123,10 +123,10 @@
    "id": "98061621",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-25T09:47:16.510764Z",
-     "iopub.status.busy": "2023-06-25T09:47:16.510425Z",
-     "iopub.status.idle": "2023-06-25T09:47:16.643049Z",
-     "shell.execute_reply": "2023-06-25T09:47:16.642380Z"
+     "iopub.execute_input": "2023-06-27T00:13:00.105070Z",
+     "iopub.status.busy": "2023-06-27T00:13:00.104684Z",
+     "iopub.status.idle": "2023-06-27T00:13:00.195790Z",
+     "shell.execute_reply": "2023-06-27T00:13:00.195205Z"
     }
    },
    "outputs": [
@@ -193,10 +193,10 @@
    "id": "f2674110",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-25T09:47:16.647625Z",
-     "iopub.status.busy": "2023-06-25T09:47:16.647361Z",
-     "iopub.status.idle": "2023-06-25T09:47:17.229410Z",
-     "shell.execute_reply": "2023-06-25T09:47:17.228631Z"
+     "iopub.execute_input": "2023-06-27T00:13:00.199230Z",
+     "iopub.status.busy": "2023-06-27T00:13:00.198987Z",
+     "iopub.status.idle": "2023-06-27T00:13:00.740398Z",
+     "shell.execute_reply": "2023-06-27T00:13:00.739777Z"
     }
    },
    "outputs": [
@@ -577,10 +577,10 @@
    "id": "b476274d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-25T09:47:17.234867Z",
-     "iopub.status.busy": "2023-06-25T09:47:17.234608Z",
-     "iopub.status.idle": "2023-06-25T09:47:17.632805Z",
-     "shell.execute_reply": "2023-06-25T09:47:17.632156Z"
+     "iopub.execute_input": "2023-06-27T00:13:00.744082Z",
+     "iopub.status.busy": "2023-06-27T00:13:00.743817Z",
+     "iopub.status.idle": "2023-06-27T00:13:01.145346Z",
+     "shell.execute_reply": "2023-06-27T00:13:01.144708Z"
     }
    },
    "outputs": [
@@ -661,10 +661,10 @@
    "id": "d2c46f7e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-25T09:47:17.637574Z",
-     "iopub.status.busy": "2023-06-25T09:47:17.637317Z",
-     "iopub.status.idle": "2023-06-25T09:47:17.653061Z",
-     "shell.execute_reply": "2023-06-25T09:47:17.652463Z"
+     "iopub.execute_input": "2023-06-27T00:13:01.149998Z",
+     "iopub.status.busy": "2023-06-27T00:13:01.149740Z",
+     "iopub.status.idle": "2023-06-27T00:13:03.947243Z",
+     "shell.execute_reply": "2023-06-27T00:13:03.946381Z"
     }
    },
    "outputs": [
@@ -695,7 +695,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>UDF TextClassifier already exists, nothing added.</td>\n",
+       "      <td>UDF TextClassifier successfully added to the d...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -703,7 +703,7 @@
       ],
       "text/plain": [
        "                                                   0\n",
-       "0  UDF TextClassifier already exists, nothing added."
+       "0  UDF TextClassifier successfully added to the d..."
       ]
      },
      "execution_count": 6,
@@ -724,13 +724,20 @@
    "id": "fd75bf79",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-25T09:47:17.656766Z",
-     "iopub.status.busy": "2023-06-25T09:47:17.656503Z",
-     "iopub.status.idle": "2023-06-25T09:47:17.669889Z",
-     "shell.execute_reply": "2023-06-25T09:47:17.669382Z"
+     "iopub.execute_input": "2023-06-27T00:13:03.950296Z",
+     "iopub.status.busy": "2023-06-27T00:13:03.949914Z",
+     "iopub.status.idle": "2023-06-27T00:13:15.956337Z",
+     "shell.execute_reply": "2023-06-27T00:13:15.955406Z"
     }
    },
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Your max_length is set to 142, but your input_length is only 11. Since this is a summarization task, where outputs shorter than the input are typically wanted, you might consider decreasing max_length manually, e.g. summarizer('...', max_length=5)\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -758,7 +765,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>UDF TextSummarizer already exists, nothing added.</td>\n",
+       "      <td>UDF TextSummarizer successfully added to the d...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -766,7 +773,7 @@
       ],
       "text/plain": [
        "                                                   0\n",
-       "0  UDF TextSummarizer already exists, nothing added."
+       "0  UDF TextSummarizer successfully added to the d..."
       ]
      },
      "execution_count": 7,
@@ -796,10 +803,10 @@
    "id": "42ddaccb",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-25T09:47:17.673474Z",
-     "iopub.status.busy": "2023-06-25T09:47:17.673227Z",
-     "iopub.status.idle": "2023-06-25T09:47:36.792224Z",
-     "shell.execute_reply": "2023-06-25T09:47:36.791310Z"
+     "iopub.execute_input": "2023-06-27T00:13:15.960747Z",
+     "iopub.status.busy": "2023-06-27T00:13:15.960462Z",
+     "iopub.status.idle": "2023-06-27T00:13:35.299616Z",
+     "shell.execute_reply": "2023-06-27T00:13:35.298724Z"
     }
    },
    "outputs": [
@@ -808,14 +815,6 @@
      "output_type": "stream",
      "text": [
       "Your max_length is set to 142, but your input_length is only 20. Since this is a summarization task, where outputs shorter than the input are typically wanted, you might consider decreasing max_length manually, e.g. summarizer('...', max_length=10)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Xformers is not installed correctly. If you want to use memory_efficient_attention to accelerate training use the following command to install Xformers\n",
-      "pip install xformers.\n"
      ]
     },
     {
