--- a/tutorials/13-privategpt.ipynb
+++ b/tutorials/13-privategpt.ipynb
@@ -6,7 +6,7 @@
    "id": "6fdba594",
    "metadata": {},
    "source": [
-    "# Similarity PDF Query Tutorial"
+    "# PrivateGPT Tutorial"
    ]
   },
   {
@@ -15,7 +15,7 @@
    "id": "05999c63",
    "metadata": {},
    "source": [
-    "In this tutorial, we demonstrate how to load a PDF and query it."
+    "In this tutorial, we demonstrate how to load a collection of PDFs and query them using a PrivateGPT-like workflow."
    ]
   },
   {
@@ -43,7 +43,7 @@
    "id": "d53ef889",
    "metadata": {},
    "source": [
-    "### Start EvaDB server\n",
+    "### Connect to EvaDB\n",
     "\n"
    ]
   },
@@ -53,22 +53,13 @@
    "id": "b6b7f61d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-26T15:18:37.652958Z",
-     "iopub.status.busy": "2023-06-26T15:18:37.652418Z",
-     "iopub.status.idle": "2023-06-26T15:18:48.838481Z",
-     "shell.execute_reply": "2023-06-26T15:18:48.837299Z"
+     "iopub.execute_input": "2023-06-27T00:13:37.863016Z",
+     "iopub.status.busy": "2023-06-27T00:13:37.862629Z",
+     "iopub.status.idle": "2023-06-27T00:13:48.517737Z",
+     "shell.execute_reply": "2023-06-27T00:13:48.516726Z"
     }
    },
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\r\n",
-      "grpcio-tools 1.56.0 requires protobuf<5.0dev,>=4.21.6, but you have protobuf 3.20.1 which is incompatible.\u001b[0m\u001b[31m\r\n",
-      "\u001b[0m"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -87,9 +78,8 @@
    "source": [
     "%pip install --quiet \"evadb[document,notebook]\"\n",
     "%pip install --quiet qdrant_client\n",
-    "from evadb.interfaces.relational.db import connect\n",
-    "conn = connect()\n",
-    "cursor = conn.cursor()"
+    "import evadb\n",
+    "cursor = evadb.connect().cursor()"
    ]
   },
   {
@@ -107,10 +97,10 @@
    "id": "1ee8b17b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-26T15:18:48.843416Z",
-     "iopub.status.busy": "2023-06-26T15:18:48.843117Z",
-     "iopub.status.idle": "2023-06-26T15:18:50.226308Z",
-     "shell.execute_reply": "2023-06-26T15:18:50.224531Z"
+     "iopub.execute_input": "2023-06-27T00:13:48.522645Z",
+     "iopub.status.busy": "2023-06-27T00:13:48.522373Z",
+     "iopub.status.idle": "2023-06-27T00:13:49.894357Z",
+     "shell.execute_reply": "2023-06-27T00:13:49.892691Z"
     }
    },
    "outputs": [
@@ -151,10 +141,10 @@
    "id": "56913976",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-26T15:18:50.231830Z",
-     "iopub.status.busy": "2023-06-26T15:18:50.231484Z",
-     "iopub.status.idle": "2023-06-26T15:18:50.532197Z",
-     "shell.execute_reply": "2023-06-26T15:18:50.531370Z"
+     "iopub.execute_input": "2023-06-27T00:13:49.899559Z",
+     "iopub.status.busy": "2023-06-27T00:13:49.899229Z",
+     "iopub.status.idle": "2023-06-27T00:13:50.043981Z",
+     "shell.execute_reply": "2023-06-27T00:13:50.043219Z"
     }
    },
    "outputs": [],
@@ -179,10 +169,10 @@
    "id": "f2674110",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-26T15:18:50.536887Z",
-     "iopub.status.busy": "2023-06-26T15:18:50.536659Z",
-     "iopub.status.idle": "2023-06-26T15:18:54.727050Z",
-     "shell.execute_reply": "2023-06-26T15:18:54.726125Z"
+     "iopub.execute_input": "2023-06-27T00:13:50.048331Z",
+     "iopub.status.busy": "2023-06-27T00:13:50.048084Z",
+     "iopub.status.idle": "2023-06-27T00:13:54.203422Z",
+     "shell.execute_reply": "2023-06-27T00:13:54.202572Z"
     }
    },
    "outputs": [
@@ -362,13 +352,20 @@
    "id": "bc57b1ff",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-26T15:18:54.732379Z",
-     "iopub.status.busy": "2023-06-26T15:18:54.732120Z",
-     "iopub.status.idle": "2023-06-26T15:18:56.234582Z",
-     "shell.execute_reply": "2023-06-26T15:18:56.233640Z"
+     "iopub.execute_input": "2023-06-27T00:13:54.208386Z",
+     "iopub.status.busy": "2023-06-27T00:13:54.208087Z",
+     "iopub.status.idle": "2023-06-27T00:13:55.815056Z",
+     "shell.execute_reply": "2023-06-27T00:13:55.814189Z"
     }
    },
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "06-26-2023 20:13:54 WARNING[drop_object_executor:drop_object_executor.py:_handle_drop_udf:0081] UDF SentenceFeatureExtractor does not exist, therefore cannot be dropped.\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -380,7 +377,7 @@
     {
      "data": {
       "text/plain": [
-       "<evadb.models.storage.batch.Batch at 0x7f0933699870>"
+       "<evadb.models.storage.batch.Batch at 0x7fbc751736a0>"
       ]
      },
      "execution_count": 5,
@@ -420,10 +417,10 @@
    "id": "fd70a210",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-26T15:18:56.238104Z",
-     "iopub.status.busy": "2023-06-26T15:18:56.237856Z",
-     "iopub.status.idle": "2023-06-26T15:18:56.242127Z",
-     "shell.execute_reply": "2023-06-26T15:18:56.241312Z"
+     "iopub.execute_input": "2023-06-27T00:13:55.822484Z",
+     "iopub.status.busy": "2023-06-27T00:13:55.822163Z",
+     "iopub.status.idle": "2023-06-27T00:13:55.827062Z",
+     "shell.execute_reply": "2023-06-27T00:13:55.826191Z"
     }
    },
    "outputs": [],
@@ -447,10 +444,10 @@
    "id": "d8b1abe7",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-26T15:18:56.245303Z",
-     "iopub.status.busy": "2023-06-26T15:18:56.244988Z",
-     "iopub.status.idle": "2023-06-26T15:19:05.442420Z",
-     "shell.execute_reply": "2023-06-26T15:19:05.441454Z"
+     "iopub.execute_input": "2023-06-27T00:13:55.830396Z",
+     "iopub.status.busy": "2023-06-27T00:13:55.830089Z",
+     "iopub.status.idle": "2023-06-27T00:14:04.799859Z",
+     "shell.execute_reply": "2023-06-27T00:14:04.798894Z"
     }
    },
    "outputs": [
@@ -512,10 +509,10 @@
    "id": "66b0bd42",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-06-26T15:19:05.447792Z",
-     "iopub.status.busy": "2023-06-26T15:19:05.447027Z",
-     "iopub.status.idle": "2023-06-26T15:19:15.284618Z",
-     "shell.execute_reply": "2023-06-26T15:19:15.283747Z"
+     "iopub.execute_input": "2023-06-27T00:14:04.805847Z",
+     "iopub.status.busy": "2023-06-27T00:14:04.805309Z",
+     "iopub.status.idle": "2023-06-27T00:14:14.492048Z",
+     "shell.execute_reply": "2023-06-27T00:14:14.491312Z"
     }
    },
    "outputs": [
