change udf to function

--- a/tutorials/03-emotion-analysis.ipynb
+++ b/tutorials/03-emotion-analysis.ipynb
@@ -648,8 +648,8 @@
     }
    ],
    "source": [
-    "cursor.drop_udf(\"EmotionDetector\").df()\n",
-    "cursor.drop_udf(\"FaceDetector\").df()"
+    "cursor.drop_function(\"EmotionDetector\").df()\n",
+    "cursor.drop_function(\"FaceDetector\").df()"
    ]
   }
  ],
