--- a/tutorials/09-license-plate-fuzzy-join.ipynb
+++ b/tutorials/09-license-plate-fuzzy-join.ipynb
@@ -364,8 +364,8 @@
     "\n",
     "cursor.query(\"\"\"DROP UDF IF EXISTS FuzzDistance;\"\"\").df()\n",
     "\n",
-    "cursor.create_udf(\"OCRExtractor\", True, '../evadb/udfs/ocr_extractor.py').df()\n",
-    "cursor.create_udf(\"FuzzDistance\", True, '../evadb/udfs/fuzzy_join.py').df()"
+    "cursor.create_function(\"OCRExtractor\", True, '../evadb/udfs/ocr_extractor.py').df()\n",
+    "cursor.create_function(\"FuzzDistance\", True, '../evadb/udfs/fuzzy_join.py').df()"
    ]
   },
   {
