--- a/tutorials/10-toxicity-classifier-huggingface.ipynb
+++ b/tutorials/10-toxicity-classifier-huggingface.ipynb
@@ -291,10 +291,10 @@
    ],
    "source": [
     "cursor.query(\"DROP UDF IF EXISTS OCRExtractor;\").df()\n",
-    "cursor.create_udf(\"OCRExtractor\", True, '../evadb/udfs/ocr_extractor.py').df()\n",
+    "cursor.create_function(\"OCRExtractor\", True, '../evadb/udfs/ocr_extractor.py').df()\n",
     "\n",
     "cursor.query(\"\"\"DROP UDF IF EXISTS ToxicityClassifier;\"\"\").df()\n",
-    "cursor.create_udf(\"ToxicityClassifier\", True, '../evadb/udfs/toxicity_classifier.py').df()"
+    "cursor.create_function(\"ToxicityClassifier\", True, '../evadb/udfs/toxicity_classifier.py').df()"
    ]
   },
   {
