--- a/tutorials/01-mnist.ipynb
+++ b/tutorials/01-mnist.ipynb
@@ -295,7 +295,7 @@
     }
    ],
    "source": [
-    "cursor.drop_udf(\"MnistImageClassifier\").df()"
+    "cursor.drop_function(\"MnistImageClassifier\").df()"
    ]
   }
  ],
