--- a/tutorials/05-asl-action-recognition.ipynb
+++ b/tutorials/05-asl-action-recognition.ipynb
@@ -455,7 +455,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cursor.drop_udf(\"ASLActionRecognition\").df()"
+    "cursor.drop_function(\"ASLActionRecognition\").df()"
    ]
   }
  ],
