change udf to function

--- a/tutorials/05-asl-action-recognition.ipynb
+++ b/tutorials/05-asl-action-recognition.ipynb
@@ -505,7 +505,7 @@
     }
    ],
    "source": [
-    "cursor.drop_udf(\"ASLActionRecognition\").df()"
+    "cursor.drop_function(\"ASLActionRecognition\").df()"
    ]
   }
  ],
