--- a/tutorials/07-object-segmentation-huggingface.ipynb
+++ b/tutorials/07-object-segmentation-huggingface.ipynb
@@ -515,7 +515,7 @@
     }
    ],
    "source": [
-    "cursor.drop_udf(\"HFSegmentation\").df()"
+    "cursor.drop_function(\"HFSegmentation\").df()"
    ]
   }
  ],
