--- a/tutorials/13-privategpt.ipynb
+++ b/tutorials/13-privategpt.ipynb
@@ -394,7 +394,7 @@
     "# Adding Emotion detection\n",
     "!wget -nc https://raw.githubusercontent.com/georgia-tech-db/eva/master/evadb/udfs/sentence_feature_extractor.py\n",
     "\n",
-    "udf = cursor.create_udf(\n",
+    "udf = cursor.create_function(\n",
     "    \"SentenceFeatureExtractor\",\n",
     "    True,\n",
     "    \"sentence_feature_extractor.py\",\n",
