--- a/tutorials/01-mnist.ipynb
+++ b/tutorials/01-mnist.ipynb
@@ -311,7 +311,7 @@
     }
    ],
    "source": [
-    "cursor.drop_udf(\"MnistImageClassifier\").df()"
+    "cursor.drop_function(\"MnistImageClassifier\").df()"
    ]
   }
  ],
