--- a/tutorials/11-similarity-search-for-motif-mining.ipynb
+++ b/tutorials/11-similarity-search-for-motif-mining.ipynb
@@ -776,10 +776,9 @@
    "source": [
     "cursor.drop_table(\"reddit_object_table\").df()\n",
     "create_index_query = \"\"\"\n",
-    "    CREATE MATERIALIZED VIEW IF NOT EXISTS \n",
-    "      reddit_object_table (name, data, bboxes,labels)\n",
+    "    CREATE TABLE IF NOT EXISTS reddit_object_table\n",
     "      AS SELECT name, data, bboxes, labels FROM reddit_dataset\n",
-    "      JOIN LATERAL UNNEST(Yolo(data)) AS Obj(labels, bboxes, scores)\"\"\"\n",
+    "      JOIN LATERAL UNNEST(Yolo(data)) AS Obj(labels, bboxes, scores);\"\"\"\n",
     "cursor.query(create_index_query).df()"
    ]
   },
