--- a/tutorials/11-similarity-search-for-motif-mining.ipynb
+++ b/tutorials/11-similarity-search-for-motif-mining.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "3a4df227",
    "metadata": {},
@@ -10,7 +9,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "5d29b79c",
    "metadata": {},
@@ -23,7 +21,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "e6df3057",
    "metadata": {},
@@ -42,7 +39,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "50b1674e",
    "metadata": {},
@@ -69,7 +65,13 @@
      "text": [
       "\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
       "grpcio-tools 1.56.0 requires protobuf<5.0dev,>=4.21.6, but you have protobuf 3.20.1 which is incompatible.\u001b[0m\u001b[31m\n",
-      "\u001b[0mNote: you may need to restart the kernel to use updated packages.\n",
+      "\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m23.1.2\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m23.2\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n",
+      "Note: you may need to restart the kernel to use updated packages.\n",
+      "\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m23.1.2\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m23.2\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
@@ -82,7 +84,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "cc9f4144",
    "metadata": {},
@@ -155,7 +156,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "0d8c9917",
    "metadata": {},
@@ -227,7 +227,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "6743684c",
    "metadata": {},
@@ -318,7 +317,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "cc5a1e73",
    "metadata": {
@@ -351,7 +349,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "07-13-2023 23:09:10 WARNING[drop_object_executor:drop_object_executor.py:_handle_drop_index:0106] Index reddit_sift_image_index does not exist, therefore cannot be dropped.\n"
+      "07-21-2023 09:48:26 WARNING[drop_object_executor:drop_object_executor.py:_handle_drop_index:0106] Index reddit_sift_image_index does not exist, therefore cannot be dropped.\n"
      ]
     },
     {
@@ -457,7 +455,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "a19a5d51",
    "metadata": {
@@ -474,7 +471,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "bce1b7fe",
    "metadata": {},
@@ -544,7 +540,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "b356c435",
    "metadata": {},
@@ -670,7 +665,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "40e563b2",
    "metadata": {},
@@ -724,7 +718,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "096d4970",
    "metadata": {},
