--- a/tutorials/08-chatgpt.ipynb
+++ b/tutorials/08-chatgpt.ipynb
@@ -192,71 +192,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2023-06-25T21:02:05.208971Z",
-     "iopub.status.busy": "2023-06-25T21:02:05.208713Z",
-     "iopub.status.idle": "2023-06-25T21:02:05.368416Z",
-     "shell.execute_reply": "2023-06-25T21:02:05.367640Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>0</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>UDF ChatGPT successfully added to the database.</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                 0\n",
-       "0  UDF ChatGPT successfully added to the database."
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Drop the UDF if it already exists\n",
-    "cursor.query(\"DROP UDF IF EXISTS ChatGPT;\").df()\n",
-    "\n",
-    "# Register the ChatGPT UDF in EvaDB\n",
-    "create_udf_query = f\"\"\"CREATE UDF ChatGPT\n",
-    "                       IMPL 'chatgpt.py' \"\"\"\n",
-    "cursor.query(create_udf_query).df()\n"
-   ]
-  },
-  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -328,9 +263,9 @@
     }
    ],
    "source": [
-    "#load the video\n",
-    "cursor.drop_table(\"VIDEOS\", if_exists=True).df()\n",
-    "cursor.query(\"LOAD VIDEO 'russia_ukraine.mp4' INTO VIDEOS;\").df()"
+    "# Load the video\n",
+    "cursor.query(\"DROP TABLE IF EXISTS VIDEOS\").df()\n",
+    "cursor.query(\"LOAD VIDEO 'russia_ukraine.mp4' INTO VIDEOS\").df()"
    ]
   },
   {
@@ -398,15 +333,15 @@
    ],
    "source": [
     "# Drop the Text Summarization UDF if needed\n",
-    "cursor.query(\"DROP UDF IF EXISTS SpeechRecognizer;\").df()\n",
+    "cursor.query(\"DROP FUNCTION IF EXISTS SpeechRecognizer;\").df()\n",
     "\n",
     "# Create a Text Summarization UDF using Hugging Face\n",
     "text_summarizer_udf_creation = \"\"\"\n",
-    "        CREATE UDF SpeechRecognizer \n",
-    "        TYPE HuggingFace \n",
-    "        'task' 'automatic-speech-recognition' \n",
-    "        'model' 'openai/whisper-base';\n",
-    "        \"\"\"\n",
+    "    CREATE FUNCTION SpeechRecognizer \n",
+    "    TYPE HuggingFace \n",
+    "    TASK 'automatic-speech-recognition' \n",
+    "    MODEL 'openai/whisper-base';\n",
+    "\"\"\"\n",
     "cursor.query(text_summarizer_udf_creation).df()"
    ]
   },
@@ -504,7 +439,7 @@
     "    CREATE TABLE\n",
     "    TEXT_SUMMARY AS \n",
     "    SELECT SpeechRecognizer(audio) FROM VIDEOS; \n",
-    "    \"\"\"\n",
+    "\"\"\"\n",
     "cursor.query(text_summarization_query).df()"
    ]
   },
@@ -566,9 +501,9 @@
    "source": [
     "# Run ChatGPT over the Text Summary extracted by Whisper\n",
     "chatgpt_udf = \"\"\"\n",
-    "      SELECT ChatGPT('Is this video summary related to Ukraine russia war',text) \n",
-    "      FROM TEXT_SUMMARY;\n",
-    "      \"\"\"\n",
+    "    SELECT ChatGPT('Is this video summary related to Ukraine russia war',text) \n",
+    "    FROM TEXT_SUMMARY;\n",
+    "\"\"\"\n",
     "cursor.query(chatgpt_udf).df()"
    ]
   },
@@ -747,7 +682,7 @@
     "    CREATE TABLE\n",
     "    SNL_TEXT_SUMMARY AS \n",
     "    SELECT SpeechRecognizer(audio) FROM SNL_VIDEO;\n",
-    "    \"\"\"\n",
+    "\"\"\"\n",
     "cursor.query(text_summarization_query).df()"
    ]
   },
@@ -817,9 +752,9 @@
    "source": [
     "# Run ChatGPT over the Text Summary extracted by Whisper\n",
     "chatgpt_udf = \"\"\"\n",
-    "      SELECT ChatGPT('Is this video summary related to Ukraine russia war',text) \n",
-    "      FROM SNL_TEXT_SUMMARY;\n",
-    "      \"\"\"\n",
+    "    SELECT ChatGPT('Is this video summary related to Ukraine russia war',text) \n",
+    "    FROM SNL_TEXT_SUMMARY;\n",
+    "\"\"\"\n",
     "cursor.query(chatgpt_udf).df()"
    ]
   },
@@ -889,17 +824,16 @@
    "source": [
     "# Run ChatGPT over the Text Summary extracted by Whisper\n",
     "chatgpt_udf = \"\"\"\n",
-    "      SELECT ChatGPT('Is this video summary related to a hospital',text) \n",
-    "      FROM SNL_TEXT_SUMMARY;\n",
-    "      \"\"\"\n",
-    "\n",
+    "    SELECT ChatGPT('Is this video summary related to a hospital',text) \n",
+    "    FROM SNL_TEXT_SUMMARY;\n",
+    "\"\"\"\n",
     "cursor.query(chatgpt_udf).df()"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "env_ish_py3.8",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -913,9 +847,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
